--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,46 @@
-certifi==2023.5.7
-distlib==0.3.6
-filelock==3.12.0
-pipenv==2023.7.11
-platformdirs==3.5.1
-virtualenv==20.23.0
-virtualenv-clone==0.5.7
+alembic==1.11.2
+aniso8601==9.0.1
+asttokens==2.2.1
+backcall==0.2.0
+bcrypt==4.0.1
+blinker==1.6.2
+click==8.1.6
+decorator==5.1.1
+executing==1.2.0
+Flask==2.3.2
+Flask-Bcrypt==1.0.1
+Flask-Cors==4.0.0
+Flask-Migrate==4.0.4
+Flask-RESTful==0.3.10
+Flask-SQLAlchemy==3.0.5
+greenlet==2.0.2
 gunicorn==21.2.0
-sqlalchemy==2.0.19
-
+importlib-metadata==6.8.0
+importlib-resources==6.0.1
+ipdb==0.13.13
+ipython==8.12.2
+itsdangerous==2.1.2
+jedi==0.19.0
+Jinja2==3.1.2
+Mako==1.2.4
+MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+packaging==23.1
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.39
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.16.1
+pytz==2023.3
+six==1.16.0
+SQLAlchemy==2.0.19
+SQLAlchemy-serializer==1.4.1
+stack-data==0.6.2
+tomli==2.0.1
+traitlets==5.9.0
+typing_extensions==4.7.1
+wcwidth==0.2.6
+Werkzeug==2.3.7
+zipp==3.16.2
