--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ blinker==1.6.2
 click==8.1.6
 decorator==5.1.1
 executing==1.2.0
-Flask==2.3.2
+Flask
 Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.0
 Flask-Migrate==4.0.4
